--- a/src/app/lista/page.module.css
+++ b/src/app/lista/page.module.css
@@ -3,46 +3,48 @@
     text-align: center;
     background-color: #f9f9f9;
     min-height: 100vh;
-}
-
-.filters {
+  }
+  
+  .filters {
     display: flex;
     justify-content: center;
     gap: 10px;
     margin-bottom: 20px;
-}
-
-.select {
+    flex-wrap: wrap;
+  }
+  
+  .select {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: white;
-}
-
-.table {
+  }
+  
+  .table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
     background-color: white;
-}
-
-.table th, .table td {
+  }
+  
+  .table th,
+  .table td {
     border: 1px solid #ccc;
     padding: 8px;
     text-align: left;
-}
-
-.table th {
+  }
+  
+  .table th {
     background-color: #0070f3;
     color: white;
-}
-
-.observacao {
+  }
+  
+  .observacao {
     font-style: italic;
     color: #555;
-}
-
-.resetButton {
+  }
+  
+  .resetButton {
     padding: 10px 15px;
     background-color: #ff4d4d;
     color: white;
@@ -51,21 +53,27 @@
     cursor: pointer;
     font-size: 14px;
     transition: background 0.3s ease;
-}
-
-.resetButton:hover {
+  }
+  
+  .resetButton:hover {
     background-color: #cc0000;
-}
-
-.erroMatricula {
+  }
+  
+  .erroMatricula {
     color: red;
     font-weight: bold;
-}
-
-
-
-@media (max-width: 768px) {
+  }
+  
+  .noResults {
+    font-size: 18px;
+    color: #555;
+    font-style: italic;
+    margin-top: 20px;
+  }
+  
+  @media (max-width: 768px) {
     .filters {
-        flex-direction: column;
+      flex-direction: column;
     }
-}
+  }
+  
