--- a/src/app/lista/page.module.css
+++ b/src/app/lista/page.module.css
@@ -96,21 +96,74 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 9999;
+    overflow: hidden;
   }
   
   .modalContent {
-    background: white;
-    padding: 60px;
-    border-radius: 40px;
-    width: 400px;
-    max-width: 90%;
-    text-align: center;
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    width: 450px;
+    max-width: 100%;
+    max-height: 80%;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 20px; /* Espaçamento consistente entre os grupos de elementos */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
   
   .modalContent h2 {
-    margin-bottom: 15px;
+    margin: 0;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
   }
   
+  .modalContent .form-group {
+    display: flex;
+    align-items: center;
+    gap: 20px; /* Espaço maior entre o label e o input */
+    width: 100%;
+  }
+  
+  .modalContent label {
+    flex: 1;
+    font-weight: bold;
+    text-align: right;
+    padding-right: 10px; /* Espaço adicional no lado direito do label */
+  }
+  
+  .modalContent input {
+    flex: 2;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+    box-sizing: border-box;
+  }
+  
+  .modalContent button {
+    width: 100%;
+    padding: 10px 15px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    text-align: center;
+  }
+  
+  .modalContent button:hover {
+    background-color: #0056b3;
+  }
+    
+
+
+
   .modalContent ul {
     list-style: none;
     padding: 0;
